# CLIB_OpenEpiCentre

./: CMakeLists.txt  README.md
include/: CLIB_OpenEpiCentre.h
include/CLIB_LaunchEnableForConcurrentThreadsAt_SERVER/: CLIB_LaunchEnableForConcurrentThreadsAt_SERVER.h
include/engine/: Algorithms.h  Data.h  Data_Control.h  Execute.h  Execute_Control.h  Framework_Server.h  Global.h  Server.h
include/engine/structs/: Concurrent.h  User_Alogorithm.h
include/engine/structs/praise_sets/: Algorithm_praise0.h  Algorithm_praise1.h  Algorithm_praise2.h  Algorithm_praise3.h
include/structs/: Concurrent.h  User_Algorithm.h
src/: CLIB_OpenEpiCentre.cpp
src/engine/: Algorithms.cpp  Data.cpp  Execute.cpp  Framework_Server.cpp  Server.cpp
src/structs/: Concurrent.cpp  Concurrent_Control.cpp  Input.cpp  Output.cpp  User_Algorithm.cpp
src/structs/praise_sets/: Algorithm_praise0.cpp  Algorithm_praise1.cpp  Algorithm_praise2.cpp  Algorithm_praise3.cpp  Input_praise0.cpp  Input_praise1.cpp  Input_praise2.cpp  Input_praise3.cpp  Output_praise0.cpp  Output_praise1.cpp  Output_praise2.cpp  Output_praise3.cpp
